--- a/src/app/components/VPP/OfficeSupplyUnit/office-supply-component/office-supply-component.component.html
+++ b/src/app/components/VPP/OfficeSupplyUnit/office-supply-component/office-supply-component.component.html
@@ -1,19 +1,42 @@
-
-<div class="button-section">
-  <div class="button-group">
-    <button class="btn btn-outline-success" (click)="openUnitModalForNewUnit()">
-      <i class="fa-solid fa-plus"></i> Thêm
-    </button>
-    <button class="btn btn-outline-warning" (click)="openUnitModalForUpdateUnit()">
-      <i class="fa-solid fa-pen-to-square"></i> Sửa
-    </button>
-    <button class="btn btn-outline-danger" (click)="deleteUnit()">
-      <i class="fa-solid fa-trash"></i> Xóa
-    </button>
+<div class="layout-wrapper d-flex" style="height: 100%">
+  <div class="container-fluid project-container" id="projectParent">
+    <div class="row">
+      <div class="col-12 p-0">
+        <div class="card">
+          <div class="card-header p-0">
+            <div class="d-flex justify-content-between">
+              <div class="d-flex gap-2">
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                  title="Thêm mới" (click)="openUnitModalForNewUnit()"
+                >
+                  <i class="fas fa-plus"></i> Thêm
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                  title="Sửa" (click)="openUnitModalForUpdateUnit()"
+                >
+                  <i class="fas fa-pen"></i> Sửa
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary p-0 ps-2 pe-2"
+                  title="Xóa" (click)="deleteUnit()"
+                >
+                  <i class="fas fa-trash"></i> Xóa
+                </button>             
+              </div>
+          </div>
+          <div class="card-body p-0">
+              <div id="datatable"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-<div class="table-container mt-3">
-  <div id="datatable"></div>
 </div>
   <!-- Modal thêm đơn vị tính -->
   <div class="modal fade" id="addUnitModal" tabindex="-1" aria-labelledby="addUnitModalLabel" aria-hidden="true">
