--- a/src/app/components/pokh/list-pokh/list-pokh.component.html
+++ b/src/app/components/pokh/list-pokh/list-pokh.component.html
@@ -10,11 +10,11 @@
                 <i class="fas fa-plus"></i> Thêm
               </button>
               <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2" title="Sửa"
-              onclick="onEdit()">
+              (click)="onEdit()">
               <i class="fas fa-plus"></i> Sửa
             </button>
-            <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2" title="Xóa"
-            onclick="onDelete()">
+            <button type="button" class="btn btn-outline-secondary p-0 ps-2 pe-2" title="Xóa" 
+            (click)="onDelete()">
             <i class="fas fa-plus"></i> Xóa
           </button>
             </div>
@@ -98,7 +98,7 @@
                 <label for="txtPOCode" class="fs-12">Mã PO</label>
                 <div class="input-group">
                   <input type="text" class="form-control form-control-sm fs-12" id="txtPOCode" [(ngModel)]="poFormData.poCode">
-                  <button class="btn btn-outline-secondary p-0 ps-2 pe-2" style="height: 4vh !important;" type="button" (click)="openModalPOCode()">
+                  <button class="btn btn-secondary p-0 ps-2 pe-2" style="height: 4vh !important;" type="button" (click)="openModalPOCode()">
                     <i class="bi bi-plus"></i>
                   </button>
                 </div>
@@ -148,13 +148,13 @@
             <div class="row mt-3">
               <div class="col-md-6">
                 <label for="cbProject" class="fs-12">Dự án</label>
-                <div class="project-select-group">
+                <div class="input-group">
                   <ng-select [items]="projects" bindLabel="ProjectName" bindValue="ID"
                     [(ngModel)]="poFormData.projectId" placeholder="Chọn dự án"
                     class="form-control form-control-sm p-0 border border-0 fs-12"
                     >
                   </ng-select>
-                  <button class="btn btn-outline-secondary p-0 ps-2 pe-2" onclick="alert('New Project')">
+                  <button class="btn btn-secondary p-0 ps-2 pe-2" style="height: 3.8vh !important;" type="button" onclick="alert('New Project')">
                     <i class="bi bi-plus"></i>
                   </button>
                 </div>
@@ -203,10 +203,7 @@
           <div class="grid-section file-upload-section">
             <p>File đính kèm</p>
             <div class="mb-3 d-flex align-items-center">
-              <input type="file" multiple class="form-control w-auto me-2 fs-12" #fileInput style="max-width: 300px;">
-              <button class="btn btn-outline-secondary p-0 ps-2 pe-2"  (click)="onUploadClick()">
-                <i class="bi bi-upload"></i> Upload
-              </button>
+              <input type="file" multiple class="form-control w-auto me-2 fs-12" #fileInput style="max-width: 300px;" (change)="onFileSelected($event)">
             </div>
             <div #fileUploaded></div>
           </div>
@@ -227,14 +224,15 @@
 
           <div class="grid-section">
             <div class="d-flex justify-content-between align-items-center">
-              <p class="mb-0 ps-0">Người phụ trách cho sản phẩm đã chọn</p>
+              <p class="mb-0 ps-0">Người phụ trách</p>
               <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked="" (click)="toggleResponsibleUsers()">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" 
+                       [(ngModel)]="isResponsibleUsersEnabled" (click)="toggleResponsibleUsers()">
               </div>
             </div>
             <div class="d-flex justify-content-between align-items-center mb-2">          
               <button class="btn btn-outline-secondary p-0 ps-2 pe-2"  (click)="addRowDetailUser()" [style.display]="isResponsibleUsersEnabled ? 'block' : 'none'">
-                Thêm người phụ trách
+                <i class="bi bi-plus-circle"></i> Thêm người phụ trách
               </button>            
             </div>
             <div #DetailUser [style.display]="isResponsibleUsersEnabled ? 'block' : 'none'"></div>
